<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Store VisionApps</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>

    <string name="entra">Entra</string>
    <string name="login_text_accedi">Accedi con il tuo account VisionApps</string>
    <string name="register_text_crea">Crea il tuo account VisionApps</string>
    <string name="changepassword_text_passwordimenticata">Password dimenticata</string>
    <string name="changepassword_text_inseriscimail">Inserisci la tua email</string>
    <string name="changepassword_button_invia">Invia</string>
    <string name="login_button_login">Accedi</string>
    <string name="login_text_password">Password</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_create">Crea un account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login_text_recuperopassword">Password dimenticata</string>
    <string name="register_text_nome">Nome</string>
    <string name="register_text_cognome">Cognome</string>
    <string name="register_text_email">Email</string>
    <string name="register_text_password">Password</string>
    <string name="register_text_professionista">Professionista</string>
    <string name="register_button">Iscriviti</string>
    <string name="register_text_ragionesociale">Ragione sociale</string>
    <string name="register_text_via">Via</string>
    <string name="register_text_paese">Paese</string>
    <string name="register_text_cap">Cap</string>
    <string name="register_text_stato">Stato</string>
    <string name="register_text_piva">P.IVA</string>
    <string name="register_text_citta">Città</string>
    <string name="register_jobs_prompt"></string>
    <string-array name="register_jobs">
        <item>Ottico/Optometrista</item>
        <item>Ortottista</item>
        <item>Oculista</item>
        <item>Altro</item>
    </string-array>
    <string name="register_text_emailconferma">Conferma Email</string>
    <string name="register_text_passwordconferma">Conferma Password</string>
    <string name="register_text_numerocivico">Numero civico</string>
    <string name="register_text_provincia">Provincia</string>

    <string name="store">Store</string>
    <string name="my_applications">Le mie app</string>
    <string name="settings">Impostazioni</string>
    <string name="no_app">Nessuna app VisionApp installata nel dispositivo</string>
    <string name="changelog_title">Cosa c\'è di nuovo:</string>
    <string name="description_title">Descrizione:</string>
    <string name="logout">Disconnetti account</string>
    <string name="confirm_logout">Sei sicuro di voler disconnettere il tuo account?</string>
    <string name="installed">Installata</string>
    <string name="update">Aggiornamento</string>
    <string name="install">Installa</string>
    <string name="buy">Acquista</string>

    <string name="html_privacy"><![CDATA[<strong>Norme sulla privacy di VisionApps</strong><br/><br/>Grazie per aver scelto di utilizzare i servizi di VisionApps. <br/><br/>Qui sotto descriviamo come utilizziamo e gestiamo i tuoi dati quando utilizzi i nostri software e i nostri servizi ("Servizi"). <br/><br/>I dati comunicati verranno trattati in conformità alle modalità previste dal Dlgs 196/2003 con le seguenti finalità: fornitura dei Servizi, invio di comunicazioni e proposte commerciali da parte di VisionApps riguardanti nuovi prodotti e servizi offerti direttamente o da propri partner commerciali. I dati non saranno comunicati a terze parti, senza specifica autorizzazione. <br/>Titolare del trattamento è VisionApps Srl, Via XX Settembre 54, 20066, Mariano Comense (CO). <br/>Incaricati del trattamento dei dati saranno i membri interni di VisionApps. Inoltre VisionApps ricorre al contributo di determinate terze parti per fornire, migliorare, proteggere e promuovere i suoi Servizi. Queste terze parti avranno accesso ai tuoi dati esclusivamente per svolgere attività per nostro conto e conformemente alle presenti Norme sulla privacy. <br/><br/>MODIFICHE<br/>Ci riserviamo il diritto di aggiornare periodicamente le presenti Norme sulla privacy. La versione più recente verrà pubblicata sul nostro sito web. Nel caso in cui una revisione possa ridurre in modo sostanziale i diritti dell\'utente, invieremo un avviso pertinente. <br/>In caso di riorganizzazione, fusione, acquisizione o vendita dei nostri beni, i tuoi dati potrebbero essere trasferiti nel quadro di tale accordo. Gli utenti verranno avvisati (ad esempio, tramite un messaggio all\'indirizzo email associato con il tuo account) di eventuali accordi e verranno informati sulle scelte a loro disposizione. <br/><br/>RICHIESTA DI CONSENSO<br/><u>Secondo i termini indicati nell\'informativa sopra riporta, La preghiamo di esprimere il suo consenso al trattamento dei suoi dati personali, ricordandole che in mancanza di consenso non sarà possibile erogare nessuno dei Servizi.</u><br/><br/>INFORMAZIONI DI CONTATTO<br/>Hai domande o dubbi su VisionApps, sui nostri Servizi e sulla privacy? Contattaci all\'indirizzo info@visionapps.it]]></string>
    <string name="html_termini"><![CDATA[<strong>Termini e Condizioni</strong><br/><br/>Grazie per aver scelto di utilizzare i servizi di VisionApps. <br/><br/>I presenti termini di servizio ("Termini") riguardano l\'utilizzo e l\'accesso ai servizi, ai software e ai siti web ("Servizi") forniti da VisionApps Srl. Le nostre Norme sulla privacy spiegano come raccogliamo e utilizziamo i tuoi dati, mentre le Norme sull\'uso  corretto dei Servizi (consultabili sul sito www.visionapps.it/uso_corretto) spiegano le tue responsabilità derivanti dall\'utilizzo dei nostri Servizi. Utilizzando i nostri Servizi, l\'utente accetta di essere vincolato ai presenti Termini e di esaminare le Norme sulla privacy e le Norme sull\'uso corretto dei Servizi. Se l\'utente sta utilizzando i nostri Servizi per un\'organizzazione, sta accettando i presenti Termini per conto di tale organizzazione. <br/><br/>I tuoi dati e le tue autorizzazioni<br/>Quando utilizzi i nostri servizi, ci fornisci dati riguardanti l\'utilizzo dei nostri software ("I tuoi dati"). Tali dati sono di tua proprietà. I presenti Termini non ci concedono nessun diritto sui tuoi dati a eccezione dei diritti limitati che ci consentono di offrire i Servizi. <br/>Abbiamo bisogno del tuo permesso per eseguire operazioni quali gestire l\'hosting dei dati e farne un backup. Per una miglior organizzazione e gestione dei tuoi dati, il sistema potrebbe richiedere l\'accesso e l\'archiviazione dei tuoi dati. L\'utente ci concede il permesso di eseguire tali operazioni e tale permesso si estende a terze parti affidabili con le quali collaboriamo. <br/><br/>Responsabilità dell\'utente<br/>Custodisci con cura la password che utilizzi per accedere ai Servizi, assicurati che non sia nota ad altre persone e mantieni aggiornati i dati del tuo account. <br/><br/>Software<br/>I nostri Servizi ti consentono di accedere ai software ("Software") che possono aggiornarsi automaticamente. A condizione di rispettare i presenti Termini, VisionApps ti concede una licenza limitata, non esclusiva, non trasferibile e revocabile per utilizzare il Software, all\'unico scopo di accedere ai Servizi. Salvo nel caso in cui le seguenti restrizioni siano proibite dalla legge, accetti di non decodificare o decompilare i Servizi, né cercare di farlo o aiutare un\'altra persona a farlo. <br/><br/>I nostri Servizi<br/>I Servizi sono protetti da copyright, marchi ed eventuali brevetti. I presenti Termini non ti concedono nessun diritto, titolo o interesse sui Servizi, sui contenuti di altri nei Servizi, su marchi e loghi di VisionApps e altre caratteristiche del brand. Accogliamo con favore il feedback da parte degli utenti, ma tieni presente che potremmo utilizzare commenti o suggerimenti senza alcun obbligo nei loro confronti. <br/><br/>Servizi a pagamento<br/>Fatturazione. Puoi aggiungere funzioni a pagamento ai Software. Ti invieremo una fattura dalla data in cui tali funzioni a pagamento saranno attive. Sei ritenuto responsabile per tutte le imposte applicabili e queste ti verranno addebitate ove necessario. <br/>Risoluzione<br/>Hai facoltà di interrompere l\'utilizzo dei Servizi in qualsiasi momento. Ci riserviamo inoltre il diritto di sospendere o terminare i Servizi in qualsiasi momento a nostra discrezione e senza previo avviso. Ad esempio, potremmo sospendere o terminare l\'utilizzo dei Servizi se non rispetti i presenti Termini, se utilizzi i Servizi in modalità che potrebbero causarci conseguenze legali.<br/><br/>Limitazione di responsabilità<br/>NEI LIMITI PREVISTI DALLA LEGGE, IN NESSUN CASO VISIONAPPS E I SUOI AFFILIATI, FORNITORI O DISTRIBUTORI SARANNO RESPONSABILI PER (A) DANNI INDIRETTI, SPECIALI, INCIDENTALI, PUNITIVI, ESEMPLARI E CONSEQUENZIALI O QUALSIASI PERDITA DI ATTIVITÀ, DATI E PROFITTI, INDIPENDENTEMENTE DALLA TEORIA LEGALE E DALL\'EVENTUALITÀ CHE VISIONAPPS SIA STATO INFORMATO O MENO DEL POSSIBILE VERIFICARSI DI TALI DANNI E ANCHE SE GLI EVENTUALI RIMEDI NON SONO IN GRADO DI RISPONDERE AL LORO PROPOSITO ESSENZIALE; (B) RESPONSABILITÀ INDIRETTA PER OGNI RECLAMO RELATIVI AI SERVIZI PER IMPORTI SUPERIORI A 20 € O QUANTO CORRISPOSTO DALL\'UTENTE A VISIONAPPS NEGLI ULTIMI 12 MESI PER I SERVIZI IN QUESTIONE. <br/><br/>Legislazione applicabile<br/>I presenti Termini saranno regolati dalle leggi italiane.<br/><br/>Contratto indivisibile<br/>I presenti Termini costituiscono il contratto indivisibile tra l\'utente e VisionApps in relazione all\'oggetto dei presenti Termini e sostituiscono qualsiasi altro contratto, termini e condizioni precedenti o contemporanee applicabili all\'oggetto dei presenti Termini. I presenti Termini non creano diritti per beneficiari di terze parti. <br/><br/>Rinuncia, clausole salvatorie e cessione<br/>La mancata applicazione da parte di VisionApps di una disposizione non rappresenta una rinuncia ad applicarla in seguito. Se una disposizione risulta inapplicabile, le restanti disposizioni del Contratto continueranno ad avere pieno effetto e si introdurrà un nuovo termine applicabile che rifletta il più fedelmente possibile i nostri intenti. Puoi non assegnare nessuno dei propri diritti stabiliti dai presenti Termini e si vieta ogni tentativo in tale senso. VisionApps può assegnare i propri diritti ai suoi affiliati o consociati o a qualunque successore per l\'interesse dell\'attività associata ai Servizi. <br/><br/>Modifiche<br/>Ci riserviamo il diritto di modificare periodicamente i presenti Termini. La versione più recente verrà sempre pubblicata sul nostro sito web. Nel caso in cui una revisione possa ridurre in modo sostanziale i tuoi diritti, ti invieremo un avviso pertinente (tramite, ad esempio, un messaggio all\'indirizzo email associato al tuo account). Continuando ad accedere o utilizzare i Servizi dopo che le revisioni diventano effettive, accetti di essere vincolato ai Termini modificati.]]></string>
</resources>
