<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_700"
    android:id="@+id/register_layout"
    tools:context="${packageName}.${activityClass}" >

    <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="1000dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey_white_1000" >

        <it.visionapps.storevisionapps.widgets.NexaTextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:background="@color/light_blue_700"
            android:gravity="center"
            android:text="@string/entra"
            android:textColor="@color/grey_white_1000"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/register_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_login" />

        <it.visionapps.storevisionapps.widgets.NexaTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/register_text_crea"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp"
            android:background="@color/grey_white_1000" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_white_1000" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_nome"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:hint="@string/register_text_nome"
                            android:inputType="textCapSentences">
                        </it.visionapps.storevisionapps.widgets.NexaEditText>
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_email"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:hint="@string/login_text_email"
                            android:ems="10"
                            android:inputType="textEmailAddress"
                            android:layout_marginTop="20dp" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_password"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:hint="@string/login_text_password"
                            android:inputType="textPassword"/>
                        <Spinner
                            android:id="@+id/register_job"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="30dp"
                            android:entries="@array/register_jobs"
                            android:prompt="@string/register_jobs_prompt" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_via"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="30dp"
                            android:ems="10"
                            android:hint="@string/register_text_via"
                            android:inputType="text" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_cap"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:hint="@string/register_text_cap"
                            android:inputType="text|number" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_provincia"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:hint="@string/register_text_provincia"
                            android:inputType="textCapCharacters"
                            android:maxLength="2" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:maxLength="11"
                            android:id="@+id/register_piva"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:hint="@string/register_text_piva"
                            android:inputType="text|number" />
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <it.visionapps.storevisionapps.widgets.NexaTextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/register_privacy"
                                android:layout_alignBottom="@+id/register_privacy"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/register_privacy"
                                android:text="Accetto i " />

                            <it.visionapps.storevisionapps.widgets.NexaTextView
                                android:id="@+id/register_linktermini"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/textView3"
                                android:layout_alignBottom="@+id/textView3"
                                android:layout_toRightOf="@+id/textView3"
                                android:text="termini di servizio"
                                android:textColor="@color/light_blue_700" />

                            <it.visionapps.storevisionapps.widgets.NexaTextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/register_linktermini"
                                android:layout_alignBottom="@+id/register_linktermini"
                                android:layout_toRightOf="@+id/register_linktermini"
                                android:text=" e le " />

                            <it.visionapps.storevisionapps.widgets.NexaTextView
                                android:id="@+id/register_linkprivacy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@+id/textView3"
                                android:layout_below="@+id/textView3"
                                android:text="norme sulla privacy"
                                android:textColor="@color/light_blue_700" />

                            <it.visionapps.storevisionapps.widgets.NexaTextView
                                android:id="@+id/textView12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/register_linkprivacy"
                                android:layout_alignBottom="@+id/register_linkprivacy"
                                android:layout_toRightOf="@+id/register_linkprivacy"
                                android:text=" di VisionApps" />

                            <CheckBox
                                android:id="@+id/register_privacy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp" />
                        </RelativeLayout>
                        <Button
                            android:id="@+id/register_button"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_alignLeft="@+id/register_piva"
                            android:layout_below="@+id/register_privacy"
                            android:layout_marginTop="40dp"
                            android:background="@color/light_blue_700"
                            android:text="@string/register_button"
                            android:textColor="@color/grey_white_1000" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_cognome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/register_text_cognome"
                            android:inputType="textCapSentences"
                            android:layout_marginTop="7dp" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_email1"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:hint="@string/register_text_emailconferma"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:inputType="textEmailAddress" />

                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_password1"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:hint="@string/register_text_passwordconferma"
                            android:ems="10"
                            android:layout_marginTop="20dp"
                            android:inputType="textPassword" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:hint="@string/register_text_ragionesociale"
                            android:id="@+id/register_ragionesociale"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="95dp"
                            android:ems="10"
                            android:inputType="textCapSentences" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_numerocivico"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:ems="10"
                            android:hint="@string/register_text_numerocivico"
                            android:inputType="text|number"
                            android:layout_marginTop="20dp" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_citta"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:ems="10"
                            android:hint="@string/register_text_citta"
                            android:layout_marginTop="20dp"
                            android:inputType="textCapSentences" />
                        <it.visionapps.storevisionapps.widgets.NexaEditText
                            android:id="@+id/register_stato"
                            android:layout_width="220dp"
                            android:layout_height="35dp"
                            android:ems="10"
                            android:hint="@string/register_text_stato"
                            android:inputType="textCapSentences"
                            android:layout_marginTop="20dp" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>