<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_700"
    android:id="@+id/changepassword_layout"
    tools:context="${packageName}.${activityClass}" >

        <RelativeLayout
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/grey_white_1000" >

            <com.visionappseestore.android.widgets.NexaTextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:background="@color/light_blue_700"
            android:gravity="center"
            android:text="@string/entra"
            android:textColor="@color/grey_white_1000"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_login" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@color/grey_white_1000" >

            <com.visionappseestore.android.widgets.NexaTextView
                android:id="@+id/login_changepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/changepassword_text_inseriscimail"
                android:textColor="@color/light_blue_700"
                android:textSize="20sp" />

            <com.visionappseestore.android.widgets.NexaEditText
                android:id="@+id/changepassword_email"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:layout_alignLeft="@+id/changepassword_button"
                android:layout_below="@+id/login_changepassword"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/login_text_email"
                android:inputType="textEmailAddress" />

            <com.visionappseestore.android.widgets.NexaTextView
                android:gravity="center"
                android:id="@+id/changepassword_button"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:layout_below="@+id/changepassword_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/light_blue_700"
                android:text="@string/changepassword_button_invia"
                android:textColor="@color/grey_white_1000" />

        </RelativeLayout>

        <com.visionappseestore.android.widgets.NexaTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/changepassword_text_passwordimenticata"
            android:textSize="20sp" />
    </RelativeLayout>
    

</RelativeLayout>
